added basic navigation html & css

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static', path='/styles.css') }}"">
+  <link rel="stylesheet" href="{{ url_for('static', path='/style.css') }}"">
   <title>School LMS</title>
 </head>
-
 <body>
   <header>
-  <h1>Welcome to School LMS</h1>
-  </header>
-  <main>
-    <p>More content here eventually.</p>
-  </main>
-</body>
+    <h1>Welcome to School LMS</h1>
+    <nav>
+      <ul>
+        <li><a href=" /">Home</a></li>
+        <li><a href="#courses">Courses</a></li>
+        <li><a href="#grades">Grades</a></li>
+        <li><a href="#schedule">Schedule</a></li>
+      </ul>
+    </nav>
+    </header>
+    <main>
+      <p>More content here eventually.</p>
+    </main>
+  </body>
 </html>
