--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-  background-color: #333;
+  background-color: #222;
   color: #ffffff;
   text-align: center;
   padding: 1rem;
@@ -13,7 +13,6 @@ header {
 
 main {
   padding: 2rem;
-  background-color: yellow;
   flex-grow: 1;
   display: flex;
   justify-content: space-around;
@@ -37,4 +36,35 @@ nav ul li a {
 nav ul li a {
   color: #ffffff;
   text-decoration: none;
+}
+
+section {
+  background-color: #f4f4f4;
+  border-radius: 5px;
+  padding: 20px;
+  width: 45%;
+}
+
+form div {
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 5px;
+}
+
+button {
+  background-color: #222;
+  color: #ffffff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
