--- a/static/style.css
+++ b/static/style.css
@@ -1,41 +1,25 @@
 body {
-  font-family: Helvetica-neue, sans-serif;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
-  background-color: #222;
+  background-color: #333;
   color: #ffffff;
   text-align: center;
   padding: 1rem;
 }
 
 main {
-  padding: 2rem;
   flex-grow: 1;
+  padding: 2rem;
   display: flex;
   justify-content: space-around;
-}
-
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-nav ul li {
-  display: inline;
-  margin-right: 10px;
-}
-
-nav ul li a {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-nav ul li a {
-  color: #ffffff;
-  text-decoration: none;
 }
 
 section {
@@ -55,16 +39,35 @@ label {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
   width: 100%;
   padding: 5px;
 }
 
 button {
-  background-color: #222;
+  background-color: #333;
   color: #ffffff;
   padding: 10px 15px;
   border: none;
   border-radius: 3px;
   cursor: pointer;
+}
+
+#messages {
+  padding: 1rem;
+}
+
+.message {
+  padding: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+.success {
+  color: #4CAF50;
+}
+
+.error {
+  color: #f44336;
 }
