--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,9 @@
 <body>
   <header>
     <h1>Welcome to School LMS</h1>
+    {% if request.cookies.get("access_token") %}
+    <a href="/logout">Logout</a>
+    {% endif %}
   </header>
   <main>
     <section id="login">
