--- a/templates/lesson_list.html
+++ b/templates/lesson_list.html
@@ -35,8 +35,11 @@
 
         {% if current_user.role in ['admin', 'teacher'] %}
         <td>
-          <!-- Need add delete link still -->
-          <a href="{{ url_for('lesson_edit_form', lesson_id=lesson.id) }}">Edit</a> | Delete
+          <a href="{{ url_for('lesson_edit_form', lesson_id=lesson.id) }}">Edit Lesson</a> |
+          <form style="display:inline;" action="{{ url_for('lesson_delete', lesson_id=lesson.id) }}" method="POST"
+            onsubmit="return confirm('Are you sure you want to delete this lesson?');">
+            <button type="submit" class="delete">Delete Lesson</button>
+          </form>
         </td>
         {% endif %}
 
