--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,6 +40,7 @@
     {% else %}
     <p>No timetable available.</p>
     {% endif %}
+    <a href="{{ url_for('view_timetable') }}">View Weekly Timetable</a>
     <a href="{{ url_for('list_lessons') }}">View Lessons</a>
     <div>
       <a href="/logout" class="logout-button">Logout</a>
