--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
         {{ error }}
       </div>
       {% endif %}
-      <form action="/login" method="post">
+      <form id="login-form" action="/login" method="post">
         <div>
           <label for="username">Username:</label>
           <input type="text" id="username" name="username" required>
@@ -31,6 +31,7 @@
           <button type="submit">Login</button>
         </div>
       </form>
+      <script src="/static/js/auth.js"></script>
       <p>Don't have an account? <a href="/register">Sign Up</a></p>
     </section>
   </main>
