--- a/templates/lesson_add.html
+++ b/templates/lesson_add.html
@@ -32,12 +32,22 @@
       </select>
     </div>
     <div>
-      <label for="start_time">Start Time:</label>
-      <input type="time" id="start_time" name="start_time" required>
+      <select name="start_time" required>
+        <option value="09:00">09:00</option>
+        <option value="10:00">10:00</option>
+        <option value="11:00">11:00</option>
+        <option value="12:00">12:00</option>
+        <option value="13:00">13:00</option>
+        <option value="14:00">14:00</option>
+      </select>
     </div>
     <div>
-      <label for="end_time">End Time:</label>
-      <input type="time" id="end_time" name="end_time" required>
+      Year Group:
+      <select name="year_group" required>
+        {% for year in range(7, 12) %}
+        <option value="{{ year }}">{{ year }}</option>
+        {% endfor %}
+      </select>
     </div>
     <div>
       <label for="timetable_id">Timetable ID:</label>
