--- a/templates/timetable_view.html
+++ b/templates/timetable_view.html
@@ -9,40 +9,41 @@
 <body>
   <h1>Weekly Timetable</h1>
   <h2>Week of {{ timetable.week_start.strftime('%B %d, %Y') }}</h2>
+  
+  {% if timetable %}
   <table>
-    <thead>
-      <tr>
-        <th>Time</th>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>Wednesday</th>
-        <th>Thursday</th>
-        <th>Friday</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for hour in range(9, 16) %} <!-- School hours from 9 AM to 3 PM -->
-      <tr>
-        <td>{{ "{:02d}:00".format(hour) }}</td>
-        {% for day in ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'] %}
-        <td>
-          {% for lesson in timetable.lessons %}
-          {% if lesson.day_of_week == day and lesson.start_time.hour == hour %}
-          <div class="lesson">
-            <strong>{{ lesson.subject }}</strong><br>
-            {{ lesson.teacher }}<br>
-            {{ lesson.classroom }}<br>
-            {{ lesson.start_time.strftime('%H:%M') }} - {{ lesson.end_time.strftime('%H:%M') }}
-          </div>
-          {% endif %}
-          {% endfor %}
-        </td>
+    <tr>
+      <th>Time</th>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+    </tr>
+    {% for hour in range(9, 15) %}
+    <tr>
+      <td>{{ "{:02d}:00".format(hour) }}</td>
+      {% for day in ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'] %}
+      <td>
+        {% for lesson in lessons_by_day[day] %}
+        {% if lesson.start_time.hour == hour %}
+        <div class="lesson">
+          <strong>{{ lesson.subject }}</strong><br>
+          {{ lesson.teacher }}<br>
+          {{ lesson.classroom }}<br>
+          {{ lesson.start_time.strftime('%H:%M') }} - {{ lesson.end_time.strftime('%H:%M') }}
+        </div>
+        {% endif %}
         {% endfor %}
-      </tr>
+      </td>
       {% endfor %}
-    </tbody>
+    </tr>
+    {% endfor %}
   </table>
-
+  {% else %}
+  <p>No timetable available.</p>
+  {% endif %}
+  
   <a href="{{ url_for('dashboard') }}">Back to Dashboard</a>
 </body>
 </html>
